--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation project(':KudanAR')
     compile 'com.wang.avi:library:2.1.3'
     compile 'com.firebase:geofire-android:2.1.3'
+    compile 'com.android.support:recyclerview-v7:26.1.+'
+    compile 'com.android.support:cardview-v7:26.1.+'
 
 }
 
