--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,12 @@ android {
     }
 }
 
+allprojects {
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
@@ -34,9 +40,10 @@ dependencies {
     implementation project(':KudanAR')
     compile 'com.wang.avi:library:2.1.3'
     compile 'com.firebase:geofire-android:2.1.3'
+    compile 'net.danlew:android.joda:2.9.9.1'
+    compile 'com.github.zjywill:OverwatchProgress:1.5'
     compile 'com.android.support:recyclerview-v7:26.1.+'
     compile 'com.android.support:cardview-v7:26.1.+'
-
 }
 
 
